syntax = "proto3";

package trivy.layer.v1;
option  go_package = "layer";

import "github.com/aquasecurity/trivy/rpc/common/service.proto";
import "google/protobuf/empty.proto";

service Layer {
  rpc Put(PutRequest) returns (google.protobuf.Empty);
  rpc MissingLayers(Layers) returns (Layers);
}

message PutRequest {
  string    layer_id                         = 1;
  string    decompressed_layer_id            = 2;
  int32     schema_version                   = 3;
  common.OS os                               = 4;
  repeated common.PackageInfo package_infos  = 5;
  repeated common.Application applications   = 6;
  repeated string             opaque_dirs    = 7;
  repeated string             whiteout_files = 8;
}

message PutResponse {
  common.OS os   = 1;
  bool      eosl = 2;
}

message Layers {
  repeated string layer_ids = 1;
}
